Use templated versions

--- a/templates/authelia/depl.yaml
+++ b/templates/authelia/depl.yaml
@@ -23,7 +23,7 @@ spec:
 
       containers:
         - name: authelia
-          image: authelia/authelia:latest
+          image: {{ .Values.image_authelia }}
           ports:
             - containerPort: 80
 
