--- a/templates/calibre/depl.yaml
+++ b/templates/calibre/depl.yaml
@@ -20,7 +20,7 @@ spec:
 
       containers:
         - name: calibre
-          image: linuxserver/calibre-web:latest
+          image: {{ .Values.image_calibre }}
           ports:
             - containerPort: 8083
 
