--- a/templates/jellyfin/depl.yaml
+++ b/templates/jellyfin/depl.yaml
@@ -20,7 +20,7 @@ spec:
 
       containers:
         - name: jellyfin
-          image: linuxserver/jellyfin:latest
+          image: {{ .Values.image_jellyfin }}
           ports:
             - containerPort: 8096
 
