--- a/values.yaml
+++ b/values.yaml
@@ -13,7 +13,7 @@ image_ldap_user_manager: "wheelybird/ldap-user-manager:v1.11"
 image_openldap: "osixia/openldap:1.5.0"
 image_miniflux_db: "postgres:16.0"
 image_miniflux: "miniflux/miniflux:2.0.49"
-image_gitea_runner: "gitea/act_runner:1.20.5"
+image_gitea_runner: "gitea/act_runner:0.2.6-dind-rootless"
 image_gitea_renovate: "renovate/renovate:37.33.5"
 image_gitea: "gitea/gitea:1.20.5"
 image_calibre: "linuxserver/calibre-web:2021.12.16"
