--- a/config/nginx/conf.d/metrics.conf
+++ b/config/nginx/conf.d/metrics.conf
@@ -7,7 +7,12 @@ server {
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
 
+  include authelia-location.conf;
+
   location / {
-    proxy_pass http://prometheus;
+    include authelia-proxy.conf;
+    include authelia-endpoint.conf;
+
+    proxy_pass http://prometheus:7878;
   }
 }
