--- a/values.yaml
+++ b/values.yaml
@@ -20,6 +20,7 @@ image_gitea_renovate: "renovate/renovate:37.33.5"
 image_gitea: "gitea/gitea:1.20.5"
 image_calibre: "linuxserver/calibre-web:0.6.21"
 image_authelia: "authelia/authelia:4.37.5"
+image_prometheus: "bitnami/prometheus:2.47.2"
 
 # image_jellyfin: "linuxserver/jellyfin"
 # image_nginx: "nginx"
