--- a/config/authelia/configuration.yaml
+++ b/config/authelia/configuration.yaml
@@ -54,7 +54,7 @@ password_policy:
 access_control:
   default_policy: deny
   rules:
-    - domain_regex: '(scurvy|movies|tv|trackers|ratio|games|books).{{ .Values.domainName }}.{{ .Values.tld }}'
+    - domain_regex: '(scurvy|movies|tv|trackers|ratio|games|books|metrics).{{ .Values.domainName }}.{{ .Values.tld }}'
       policy: one_factor
       subject:
         - ["user:kwkaiser"] 
