Working metrics deployment pulling from node exporter

--- a/values.yaml
+++ b/values.yaml
@@ -39,3 +39,4 @@ image_prometheus: "bitnami/prometheus:2.47.2"
 # image_gitea: "gitea/gitea"
 # image_calibre: "linuxserver/calibre-web"
 # image_authelia: "authelia/authelia"
+# image_prometheus: "bitnami/prometheus"
