--- a/config/prometheus/configuration.yaml
+++ b/config/prometheus/configuration.yaml
@@ -9,4 +9,4 @@ rule_files:
 scrape_configs:
   - job_name: prometheus
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['localhost:9090', '192.168.1.68:9100', '192.168.1.69:9100']
