--- a/config/authelia/configuration.yaml
+++ b/config/authelia/configuration.yaml
@@ -10,6 +10,18 @@ server:
   path: ""
   disable_healthcheck: false
 
+telemetry:
+  metrics:
+    enabled: true
+    address: "tcp://0.0.0.0:9959"
+    buffers:
+      read: 4096
+      write: 4096
+    timeouts:
+      read: 6s
+      write: 6s
+      idle: 30s
+
 log:
   level: trace
   format: json
