--- a/config/prometheus/configuration.yaml
+++ b/config/prometheus/configuration.yaml
@@ -9,4 +9,11 @@ rule_files:
 scrape_configs:
   - job_name: prometheus
     static_configs:
-      - targets: ['localhost:9090', '192.168.1.68:9100', '192.168.1.69:9100']
+      - targets: 
+        - "localhost:9090"
+        - "192.168.1.68:9100" # node-exporter: thinkcentre
+        - "192.168.1.69:9100" # node-exporter: main array
+        - "authelia:9959"
+        - "jellyfin"
+        - "gitea"
+        - "miniflux"
