--- a/templates/authelia/svc.yaml
+++ b/templates/authelia/svc.yaml
@@ -2,10 +2,16 @@ apiVersion: v1
 kind: Service
 metadata:
   name: authelia
-spec: 
+spec:
   selector:
     app: authelia
   ports:
     - protocol: TCP
+      name: http
       port: 80
       targetPort: 9091
+
+    - protocol: TCP
+      name: prom
+      port: 9959
+      targetPort: 9959
