--- a/templates/observability/depl.yaml
+++ b/templates/observability/depl.yaml
@@ -45,3 +45,4 @@ spec:
         {{ include "waitFor" (dict "Name" "jellyfin" "Port" 80) }}
         {{ include "waitFor" (dict "Name" "authelia" "Port" 9959) }}
         {{ include "waitFor" (dict "Name" "gitea" "Port" 80) }}
+        {{ include "waitFor" (dict "Name" "miniflux" "Port" 80) }}
