--- a/config/nginx/conf.d/metrics.conf
+++ b/config/nginx/conf.d/metrics.conf
@@ -7,7 +7,18 @@ server {
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
 
+  include authelia-location.conf;
+
+  proxy_set_header Host $host;
+  proxy_set_header X-Real-IP $remote_addr;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header Upgrade $http_upgrade;
+  proxy_set_header Connection $http_connection;
+
   location / {
+    include authelia-proxy.conf;
+    include authelia-endpoint.conf;
+
     proxy_pass http://prometheus;
   }
 }
