--- a/templates/nginx/depl.yaml
+++ b/templates/nginx/depl.yaml
@@ -9,6 +9,8 @@ spec:
   replicas: 1
   template:
     metadata:
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/nginx/cm.yaml") . | sha256sum }}
       labels:
         app: nginx
         app.kubernetes.io/name: nginx
