--- a/templates/observability/depl.yaml
+++ b/templates/observability/depl.yaml
@@ -9,6 +9,8 @@ spec:
   replicas: 1
   template:
     metadata:
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/observability/cm.yaml") . | sha256sum }}
       labels:
         app: prometheus
         app.kubernetes.io/name: prometheus
