Grafana working & totally overwhelming

--- a/config/nginx/conf.d/stats.conf
+++ b/config/nginx/conf.d/stats.conf
@@ -8,6 +8,7 @@ server {
   fastcgi_buffer_size 32k;
 
   location / {
+    proxy_set_header Host $http_host;
     proxy_pass http://grafana;
   }
 }
