--- a/templates/observability/grafana/depl.yaml
+++ b/templates/observability/grafana/depl.yaml
@@ -9,6 +9,8 @@ spec:
   replicas: 1
   template:
     metadata:
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/observability/grafana/cm.yaml") . | sha256sum }}
       labels:
         app: grafana
         app.kubernetes.io/name: grafana
@@ -18,13 +20,27 @@ spec:
           persistentVolumeClaim:
             claimName: bulk-nfs
 
+        - name: grafana-configs
+          configMap:
+            name: grafana-configs
+            items:
+              - key: config.ini
+                path: config.ini
+
       containers:
         - name: grafana
           image: {{ .Values.image_grafana }}
           ports:
             - containerPort: 3000
+          args:
+            - "--config=/config.ini"
 
           volumeMounts:
             - name: data
               mountPath: /var/lib/grafana
               subPath: application/grafana
+
+            - name: grafana-configs
+              mountPath: config.ini 
+              subPath: config.ini
+              readOnly: false
