--- a/values.yaml
+++ b/values.yaml
@@ -22,6 +22,7 @@ image_calibre: "linuxserver/calibre-web:0.6.21"
 image_authelia: "authelia/authelia:4.37.5"
 image_prometheus: "bitnami/prometheus:2.47.2"
 image_grafana: "grafana/grafana:10.2.0"
+image_promtail: "grafana/promtail:main-66b36cb"
 
 # image_jellyfin: "linuxserver/jellyfin"
 # image_nginx: "nginx"
@@ -42,3 +43,4 @@ image_grafana: "grafana/grafana:10.2.0"
 # image_authelia: "authelia/authelia"
 # image_prometheus: "bitnami/prometheus"
 # image_grafana: "grafana/grafana"
+# image_promtail: "grafana/promtail"
