Initial loki depl

--- a/values.yaml
+++ b/values.yaml
@@ -23,6 +23,7 @@ image_authelia: "authelia/authelia:4.37.5"
 image_prometheus: "bitnami/prometheus:2.47.2"
 image_grafana: "grafana/grafana:10.2.0"
 image_promtail: "grafana/promtail:main-66b36cb"
+image_loki: "grafana/loki:main-66b36cb"
 
 # image_jellyfin: "linuxserver/jellyfin"
 # image_nginx: "nginx"
@@ -44,3 +45,4 @@ image_promtail: "grafana/promtail:main-66b36cb"
 # image_prometheus: "bitnami/prometheus"
 # image_grafana: "grafana/grafana"
 # image_promtail: "grafana/promtail"
+# image_loki: "grafana/loki"
