--- a/values.yaml
+++ b/values.yaml
@@ -3,46 +3,46 @@ domainName: kwkaiser-test
 tld: io
 piracyIp: "143.244.47.87"
 
-image_jellyfin: "linuxserver/jellyfin:2021.12.16"
-image_nginx: "nginx:1.25.3"
-image_wireguard: "linuxserver/wireguard:1.0.20210914"
-image_qbittorrent: "linuxserver/qbittorrent:4.6.0"
-image_radarr: "linuxserver/radarr:5.0.3"
-image_sonarr: "linuxserver/sonarr:3.0.10"
-image_prowlarr: "linuxserver/prowlarr:1.9.4"
-image_autobrr: "ghcr.io/autobrr/autobrr:pr-1216"
-image_ldap_user_manager: "wheelybird/ldap-user-manager:v1.11" 
-image_openldap: "osixia/openldap:1.5.0"
-image_miniflux_db: "postgres:16.0"
-image_miniflux: "miniflux/miniflux:2.0.49"
-image_gitea_runner: "gitea/act_runner:0.2.6-dind-rootless"
-image_gitea_renovate: "renovate/renovate:37.33.5"
-image_gitea: "gitea/gitea:1.20.5"
-image_calibre: "linuxserver/calibre-web:0.6.21"
-image_authelia: "authelia/authelia:4.37.5"
-image_prometheus: "bitnami/prometheus:2.47.2"
-image_grafana: "grafana/grafana:10.2.0"
-image_promtail: "grafana/promtail:main-66b36cb"
-image_loki: "grafana/loki:main-66b36cb"
+# image_jellyfin: "linuxserver/jellyfin:2021.12.16"
+# image_nginx: "nginx:1.25.3"
+# image_wireguard: "linuxserver/wireguard:1.0.20210914"
+# image_qbittorrent: "linuxserver/qbittorrent:4.6.0"
+# image_radarr: "linuxserver/radarr:5.0.3"
+# image_sonarr: "linuxserver/sonarr:3.0.10"
+# image_prowlarr: "linuxserver/prowlarr:1.9.4"
+# image_autobrr: "ghcr.io/autobrr/autobrr:pr-1216"
+# image_ldap_user_manager: "wheelybird/ldap-user-manager:v1.11" 
+# image_openldap: "osixia/openldap:1.5.0"
+# image_miniflux_db: "postgres:16.0"
+# image_miniflux: "miniflux/miniflux:2.0.49"
+# image_gitea_runner: "gitea/act_runner:0.2.6-dind-rootless"
+# image_gitea_renovate: "renovate/renovate:37.33.5"
+# image_gitea: "gitea/gitea:1.20.5"
+# image_calibre: "linuxserver/calibre-web:0.6.21"
+# image_authelia: "authelia/authelia:4.37.5"
+# image_prometheus: "bitnami/prometheus:2.47.2"
+# image_grafana: "grafana/grafana:10.2.0"
+# image_promtail: "grafana/promtail:main-66b36cb"
+# image_loki: "grafana/loki:main-66b36cb"
 
-# image_jellyfin: "linuxserver/jellyfin"
-# image_nginx: "nginx"
-# image_wireguard: "linuxserver/wireguard"
-# image_qbittorrent: "linuxserver/qbittorrent"
-# image_radarr: "linuxserver/radarr"
-# image_sonarr: "linuxserver/sonarr"
-# image_prowlarr: "linuxserver/prowlarr"
-# image_autobrr: "ghcr.io/autobrr/autobrr"
-# image_ldap_user_manager: "wheelybird/ldap-user-manager" 
-# image_openldap: "osixia/openldap"
-# image_miniflux_db: "postgres"
-# image_miniflux: "miniflux/miniflux"
-# image_gitea_runner: "gitea/act_runner"
-# image_gitea_renovate: "renovate/renovate"
-# image_gitea: "gitea/gitea"
-# image_calibre: "linuxserver/calibre-web"
-# image_authelia: "authelia/authelia"
-# image_prometheus: "bitnami/prometheus"
-# image_grafana: "grafana/grafana"
-# image_promtail: "grafana/promtail"
-# image_loki: "grafana/loki"
+image_jellyfin: "linuxserver/jellyfin"
+image_nginx: "nginx"
+image_wireguard: "linuxserver/wireguard"
+image_qbittorrent: "linuxserver/qbittorrent"
+image_radarr: "linuxserver/radarr"
+image_sonarr: "linuxserver/sonarr"
+image_prowlarr: "linuxserver/prowlarr"
+image_autobrr: "ghcr.io/autobrr/autobrr"
+image_ldap_user_manager: "wheelybird/ldap-user-manager" 
+image_openldap: "osixia/openldap"
+image_miniflux_db: "postgres"
+image_miniflux: "miniflux/miniflux"
+image_gitea_runner: "gitea/act_runner"
+image_gitea_renovate: "renovate/renovate"
+image_gitea: "gitea/gitea"
+image_calibre: "linuxserver/calibre-web"
+image_authelia: "authelia/authelia"
+image_prometheus: "bitnami/prometheus"
+image_grafana: "grafana/grafana"
+image_promtail: "grafana/promtail"
+image_loki: "grafana/loki"
