drop filename from labels

--- a/config/promtail/promtail.yaml
+++ b/config/promtail/promtail.yaml
@@ -16,6 +16,8 @@ scrape_configs:
                 expression: (\/var\/log\/containers\/)(?P<containerName>.+)(-.+-.+_default_.+)
             - labels:
                 containerName:
+            - labeldrop:
+                - filename
 
 clients: 
   - url: 'http://loki/loki/api/v1/push'
