Just use secret ref

--- a/templates/openldap/db/depl.yaml
+++ b/templates/openldap/db/depl.yaml
@@ -34,13 +34,11 @@ spec:
             - name: LDAP_DOMAIN
               value: {{ .Values.domainName }}.{{ .Values.tld }}
 
-            # This container unfortunately doesn't have an option to mount
-            # password from file, so leaks into the helm chart.
-            #
-            # When bootstrapping, set with default password, then replace in
-            # container & comment out this option
-            # - name: LDAP_ADMIN_PASSWORD
-            #   value: password
+            - name: LDAP_ADMIN_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: openldap.binddn.pw
+                  key: value
             
             - name: LDAP_REQUIRE_STARTTLS
               value: "false"
