--- a/templates/gitea/app/depl.yaml
+++ b/templates/gitea/app/depl.yaml
@@ -19,23 +19,6 @@ spec:
             claimName: bulk-nfs
 
       containers:
-        - name: giteadb
-          image: postgres
-          ports:
-            - containerPort: 5432
-
-          env:
-            - name: POSTGRES_USER
-              value: postgres
-
-            - name: POSTGRES_PASSWORD
-              value: password
-
-          volumeMounts:
-            - name: data
-              mountPath: /var/lib/postgresql/data
-              subPath: application/gitea/db
-
         - name: gitea
           image: {{ .Values.image_gitea }}
           ports:
@@ -47,7 +30,7 @@ spec:
               value: postgres
 
             - name: GITEA__database__HOST
-              value: 0.0.0.0:5432
+              value: giteadb:5432
 
             - name: GITEA__database__NAME
               value: postgres
@@ -79,3 +62,5 @@ spec:
             - name: data
               mountPath: /data/git/lfs
               subPath: application/gitea/lfs
+
+      {{ include "waitFor" (dict "Name" "giteadb" "Port" 5432) }}
