Use secret for renovate token

--- a/templates/gitea/renovate/cron.yaml
+++ b/templates/gitea/renovate/cron.yaml
@@ -35,6 +35,12 @@ spec:
                 - name: RENOVATE_AUTODISCOVER
                   value: "true"
 
+                - name: RENOVATE_TOKEN
+                  valueFrom:
+                    secretKeyRef:
+                      name: gitea.renovate.token
+                      key: value
+
               volumeMounts:
                 - name: renovate-configs
                   mountPath: /usr/src/app/config.json
