Update nginx configs

--- a/config/nginx/conf.d/ratio.conf
+++ b/config/nginx/conf.d/ratio.conf
@@ -19,6 +19,6 @@ server {
     include authelia-proxy.conf;
     include authelia-endpoint.conf;
 
-    proxy_pass http://piracy:7474;
+    proxy_pass http://autobrr;
   }
 }
