--- a/config/nginx/conf.d/scurvy.conf
+++ b/config/nginx/conf.d/scurvy.conf
@@ -13,6 +13,6 @@ server {
     include authelia-proxy.conf;
     include authelia-endpoint.conf;
 
-    proxy_pass http://piracy:8080;
+    proxy_pass http://qbittorrent;
   }
 }
