Use runner token from secret

--- a/templates/gitea/runner/depl.yaml
+++ b/templates/gitea/runner/depl.yaml
@@ -39,7 +39,10 @@ spec:
               value: "http://gitea"
 
             - name: GITEA_RUNNER_REGISTRATION_TOKEN
-              value: "hiA4VTSnGOJoLrbVOp2ZUc6p7zTgnTguoHqstTyf"
+              valueFrom:
+                secretKeyRef:
+                  name: gitea.runner.token
+                  key: value
 
           volumeMounts:
             - name: data
