--- a/templates/gitea/runner/depl.yaml
+++ b/templates/gitea/runner/depl.yaml
@@ -18,6 +18,12 @@ spec:
           persistentVolumeClaim:
             claimName: bulk-nfs
 
+        - name: docker-certs
+          emptyDir: {}
+
+      securityContext:
+        fsGroup: 1000
+
       containers:
         - name: gitea-runner
           image: {{ .Values.image_gitea_runner }}
@@ -45,9 +51,24 @@ spec:
                   key: value
 
           volumeMounts:
+            - name: docker-certs
+              mountPath: /certs
             - name: data
               mountPath: /data
               subPath: application/gitea/runner
+
+        - name: daemon
+          image: docker:23.0.6-dind
+          env:
+          - name: DOCKER_TLS_CERTDIR
+            value: /certs
+
+          securityContext:
+            privileged: true
+
+          volumeMounts:
+          - name: docker-certs
+            mountPath: /certs
 
       initContainers: 
         {{ include "waitFor" (dict "Name" "gitea" "Port" 80) }}
