--- a/.gitea/workflows/test.yaml
+++ b/.gitea/workflows/test.yaml
@@ -8,10 +8,12 @@ jobs:
     name: Helm lint
     runs-on: ubuntu-latest
     steps:
-      - name: Install helm
-        run: |
-          curl https://baltocdn.com/helm/signing.asc | gpg --dearmor | sudo tee /usr/share/keyrings/helm.gpg > /dev/null
-          apt-get install apt-transport-https --yes
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/helm.gpg] https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
-          apt-get update
-          apt-get install helm
+      - name: Echo
+        run: echo 'foo'
+      # - name: Install helm
+      #   run: |
+      #     curl https://baltocdn.com/helm/signing.asc | gpg --dearmor | sudo tee /usr/share/keyrings/helm.gpg > /dev/null
+      #     apt-get install apt-transport-https --yes
+      #     echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/helm.gpg] https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
+      #     apt-get update
+      #     apt-get install helm
