--- a/templates/gitea/runner/depl.yaml
+++ b/templates/gitea/runner/depl.yaml
@@ -53,9 +53,9 @@ spec:
           volumeMounts:
             - name: docker-certs
               mountPath: /certs
-            - name: data
-              mountPath: /data
-              subPath: application/gitea/runner/data
+            # - name: data
+            #   mountPath: /data
+            #   subPath: application/gitea/runner/data
 
         - name: daemon
           image: docker:23.0.6-dind
@@ -70,9 +70,9 @@ spec:
             - name: docker-certs
               mountPath: /certs
 
-            - name: data
-              mountPath: /var/lib/docker
-              subPath: application/gitea/runner/docker
+            # - name: data
+            #   mountPath: /var/lib/docker
+            #   subPath: application/gitea/runner/docker
 
       initContainers: 
         {{ include "waitFor" (dict "Name" "gitea" "Port" 80) }}
