--- a/templates/miniflux/depl.yaml
+++ b/templates/miniflux/depl.yaml
@@ -1,6 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    secret.reloader.stakater.com/reload: "miniflux.db.password"
   name: miniflux
 spec:
   selector:
