--- a/templates/nginx/depl.yaml
+++ b/templates/nginx/depl.yaml
@@ -1,6 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    configmap.reloader.stakater.com/reload: "nginx-configs"
+    secret.reloader.stakater.com/reload: "nginx.certificate.key,nginx.certificate"
   name: nginx
 spec:
   selector:
@@ -9,8 +12,6 @@ spec:
   replicas: 1
   template:
     metadata:
-      annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/nginx/cm.yaml") . | sha256sum }}
       labels:
         app: nginx
         app.kubernetes.io/name: nginx
