--- a/templates/observability/grafana/depl.yaml
+++ b/templates/observability/grafana/depl.yaml
@@ -1,6 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    configmap.reloader.stakater.com/reload: "grafana-configs"
   name: grafana
 spec:
   selector:
@@ -9,8 +11,6 @@ spec:
   replicas: 1
   template:
     metadata:
-      annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/observability/grafana/cm.yaml") . | sha256sum }}
       labels:
         app: grafana
         app.kubernetes.io/name: grafana
