--- a/templates/observability/promtail/daemon.yaml
+++ b/templates/observability/promtail/daemon.yaml
@@ -1,6 +1,8 @@
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
+  annotations:
+    configmap.reloader.stakater.com/reload: "promtail-configs"
   name: promtail
 spec:
   selector:
@@ -9,7 +11,6 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/observability/promtail/cm.yaml") . | sha256sum }}
       labels:
         app: promtail
         app.kubernetes.io/name: promtail
