--- a/templates/openldap/app/depl.yaml
+++ b/templates/openldap/app/depl.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ldap-user-manager
+  annotations:
+    secret.reloader.stakater.com/reload: "openldap.binddn.password"
 spec:
   selector:
     matchLabels:
