--- a/templates/gitea/runner/depl.yaml
+++ b/templates/gitea/runner/depl.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kubectl.kubernetes.io/redeploy-annotation: gitea.runner.token
+    secret.reloader.stakater.com/reload: gitea.runner.token
   name: gitea-runner
 spec:
   selector:
