--- a/templates/gitea/runner/depl.yaml
+++ b/templates/gitea/runner/depl.yaml
@@ -32,7 +32,7 @@ spec:
 
       containers:
         - name: gitea-runner-daemon
-          image: docker:23.0.6-dind
+          image: {{ .Values.image_dind }}
           env:
           - name: DOCKER_TLS_CERTDIR
             value: /certs
