--- a/values.yaml
+++ b/values.yaml
@@ -24,6 +24,7 @@ piracyIp: "143.244.47.87"
 # image_grafana: "grafana/grafana:10.2.0"
 # image_promtail: "grafana/promtail:main-66b36cb"
 # image_loki: "grafana/loki:main-66b36cb"
+image_dind: docker:23.0.6-dind
 
 image_jellyfin: "linuxserver/jellyfin"
 image_nginx: "nginx"
