--- a/.gitea/workflows/test.yaml
+++ b/.gitea/workflows/test.yaml
@@ -8,6 +8,8 @@ jobs:
     name: Helm lint
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+
       - name: Install helm
         run: |
           curl https://baltocdn.com/helm/signing.asc | gpg --dearmor | tee /usr/share/keyrings/helm.gpg > /dev/null
@@ -16,20 +18,14 @@ jobs:
           apt-get update
           apt-get install helm
 
-      - name: List files
-        run: echo $(ls .)
+      - name: Lint helm chart
+        run: helm lint .
 
-      - name: Print cwd
-        run: echo $(pwd)
+      - name: Install kubeval
+        run:
+          wget https://github.com/instrumenta/kubeval/releases/latest/download/kubeval-linux-amd64.tar.gz
+          tar xf kubeval-linux-amd64.tar.gz
+          cp kubeval /usr/local/bin
 
-      # - name: Lint helm chart
-      #   run: helm lint .
-
-      # - name: Install kubeval
-      #   run:
-      #     wget https://github.com/instrumenta/kubeval/releases/latest/download/kubeval-linux-amd64.tar.gz
-      #     tar xf kubeval-linux-amd64.tar.gz
-      #     cp kubeval /usr/local/bin
-
-      # - name: Lint against templated charts
-      #   run: helm template . | kubeval --ignore-missing-shemas
+      - name: Lint against templated charts
+        run: helm template . | kubeval --ignore-missing-shemas
