--- a/.gitea/workflows/test.yaml
+++ b/.gitea/workflows/test.yaml
@@ -22,7 +22,7 @@ jobs:
       #   run: helm lint .
 
       - name: Install kubeval
-        run:
+        run: |
           wget https://github.com/instrumenta/kubeval/releases/latest/download/kubeval-linux-amd64.tar.gz
           tar xf kubeval-linux-amd64.tar.gz
           cp kubeval /usr/local/bin
