--- a/.gitea/workflows/test.yaml
+++ b/.gitea/workflows/test.yaml
@@ -27,5 +27,8 @@ jobs:
           tar xf kubeval-linux-amd64.tar.gz
           cp kubeval /usr/local/bin
 
-      - name: Lint against templated charts
-        run: helm dependency build && helm template . | kubeval --ignore-missing-shemas
+      - name: Generate templated chart
+        run: helm dependency build && helm template . > template.yaml 
+
+      - name: Lint templated chart
+        run: kubeval --ignore-missing-schemas ./template.yaml
