--- a/.gitea/workflows/test.yaml
+++ b/.gitea/workflows/test.yaml
@@ -8,6 +8,7 @@ jobs:
     name: Helm lint
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
       - uses: actions/checkout@v3
 
       - name: Install helm
