--- a/.gitea/workflows/test.yaml
+++ b/.gitea/workflows/test.yaml
@@ -4,12 +4,12 @@ on:
   - pull_request
 
 jobs:
-  lint:
-    name: Helm lint
+  code-quality:
+    name: Code quality
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Install helm
         run: |
