--- a/values.yaml
+++ b/values.yaml
@@ -15,7 +15,7 @@ image_ldap_user_manager: "wheelybird/ldap-user-manager:v1.11"
 image_openldap: "osixia/openldap:1.5.0"
 image_miniflux_db: "postgres:16.0"
 image_miniflux: "miniflux/miniflux:2.0.49"
-image_gitea_runner: "gitea/act_runner:0.2.6-dind-rootless"
+# image_gitea_runner: "gitea/act_runner:0.2.6-dind-rootless"
 image_gitea_renovate: "renovate/renovate:37.33.5"
 image_gitea: "gitea/gitea:1.20.5"
 image_calibre: "linuxserver/calibre-web:0.6.21"
@@ -38,7 +38,7 @@ image_jellyfin: "linuxserver/jellyfin"
 # image_openldap: "osixia/openldap"
 # image_miniflux_db: "postgres"
 # image_miniflux: "miniflux/miniflux"
-# image_gitea_runner: "gitea/act_runner"
+image_gitea_runner: "gitea/act_runner"
 # image_gitea_renovate: "renovate/renovate"
 # image_gitea: "gitea/gitea"
 # image_calibre: "linuxserver/calibre-web"
