--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -1,9 +1,18 @@
 name: Deploy
+
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - main
 
 jobs:
   code-quality:
     name: Check code quality
     uses: ./.gitea/workflows/code-quality.yaml
+
+  release:
+    needs: code-quality
+    runs-on: ubuntu-latest
+    steps:
+      - name: Echo
+        run: echo 'foo'
