--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -11,8 +11,25 @@ jobs:
     uses: ./.gitea/workflows/code-quality.yaml
 
   release:
+    name: Release
     needs: code-quality
     runs-on: ubuntu-latest
-    steps:
-      - name: Echo
-        run: echo 'foo'
+    steps: 
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install helm
+        run: |
+          curl https://baltocdn.com/helm/signing.asc | gpg --dearmor | tee /usr/share/keyrings/helm.gpg > /dev/null
+          apt-get install apt-transport-https --yes
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/helm.gpg] https://baltocdn.com/helm/stable/debian/ all main" | tee /etc/apt/sources.list.d/helm-stable-debian.list
+          apt-get update
+          apt-get install helm
+
+      - name: Write secret to file
+        run: | 
+          mkdir -pv $HOME/.kube
+          echo ${{ .secrets.KUBE_CONFIG }} > $HOME/.kube/config
+
+      - name: Helm list
+        run: echo $(helm list)
