--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run helm command
         run: |
-          echo $KUBE_CONFIG > kube-config
-          echo $(helm --kubeconfig ./kube-config list)
+          echo $KUBE_CONFIG > kube-config.json
+          echo $(helm --kubeconfig ./kube-config.json list)
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
